--- a/index.html
+++ b/index.html
@@ -20,5 +20,20 @@
     <section id="home">
       <h1>Welcome to My Portfolio</h1>
     </section>
+    <section id="about">
+      <h2>About Me</h2>
+      <p>
+        Hi, I'm a front-end web developer with a passion for creating beautiful
+        and functional websites.
+      </p>
+    </section>
+    <section id="projects">
+      <h2>Projects</h2>
+      <ul>
+        <li>Project1</li>
+        <li>Project2</li>
+        <li>Project3</li>
+      </ul>
+    </section>
   </body>
 </html>
