projects & contact added

--- a/index.html
+++ b/index.html
@@ -35,5 +35,13 @@
         <li>Project3</li>
       </ul>
     </section>
+    <section id="contact">
+      <h2>Contact Me</h2>
+      <p>Email: al;sdkjf@email.com</p>
+    </section>
+    <footer>
+      <p>&copy; 2023 My Portfolio. All rights reserved.</p>
+    </footer>
+    <button id="scrollToTop">Top</button>
   </body>
 </html>
