--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>My Portfolio</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <header>
@@ -43,5 +44,6 @@
       <p>&copy; 2023 My Portfolio. All rights reserved.</p>
     </footer>
     <button id="scrollToTop">Top</button>
+    <script src="index.js"></script>
   </body>
 </html>
